# paraview-vtk-template

./: .gitignore  CMakeLists.txt  README.md  activate.in  superbuild.sh
.github/workflows/: main.yml
MyFilters/: CMakeLists.txt  MyAlgorithm.cpp  MyAlgorithm.h  vtk.module
MyPlugin/: CMakeLists.txt  MyAlgorithm.xml  paraview.plugin
paraview/: CMakeLists.txt  ExampleFilter.xml  paraview.plugin
python/: CMakeLists.txt  load_python_plugins.py
python/my_python_module/: MyImageSource.py  all_plugins.py  paraview_util.py
python/plugin/: load_python_plugins.py
python/standalone/: example_pipeline.py  example_pvpython.py
standalone/: CMakeLists.txt  myalgorithm_main.cpp
tests/: test_paraview.py  test_vtk.py
vtk/: CMakeLists.txt  ExampleFilter.cpp  ExampleFilter.h  vtk.module
